sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:5: error: not found: value i
  while (i+ecart<n){
         ^