sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var n:Int=getNombreValeurs
  var ecart:Int=n
  while (i+ecart<n){
    if (ecart>1) {
      ecart = (ecart.toDouble/1.3).toInt
    }
    var i:Int=0

    if (!plusPetit(i,i+ecart)){
      echange(i,i+ecart)
    }
    i=i+1
  }
}